test/run-pass/semck/use-const.rs
const SIZE: int = 10;

fn main() {
    SIZE + 1;
}