test/compile-fail/parser/invalid-token-in-first-line.rs
const NAME: int = +;  //! ERROR(1:19): unexpected token: `+`, expected a literal